@@ -8,6 +8,7 @@
   Actions tab shows a counter feedback for inserts (with a plus signal) and 
     removals (with a minus signal) and does not steal focus anymore. 
   Changed "Sync packages" string to "Check updates".
+  BugFix: openFile always left a running file manager even after program close.
   BugFix: Disable refreshing of Info and File tabs while searching for a pkg.
   BugFix: Prefer bash shell when running actions.
   BugFix: Disable Info/Files tab refresh while typing in filter/search line edit.
